2004-07-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b57

	* Change: Better handling of the onsubmit/double-clicking issue
	  utilizing an 'action' input which is changed depending on
	  which button was clicked.

2004-07-22 Jens A. Tkotz <jens@peino.de> 1.4.5-cvs-b56

	* Change: Print Extra fields above comments in view_photo

	* New: Added css for album summary

	* Change: Print Album summary above voting results and button

	* Change: Cleanup and fixed irritating error messages in login

2004-07-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b55

	* Fix: Unset variable prevention

	* Fix: b0rked list() in last checkin

2004-07-21  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b54

	* Change: Partial de-globalization of config wizard.

2004-07-21  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b53

	* Change: 'No files' to 'All files', and remove a stray binary
	  char.

2004-07-21  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b52

	* Change: Whitespace readability changes

	* Change: Prevent unset variable notices from PHP

2004-07-21  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b51

	* Change: Prevent unset variable notices from PHP

2004-07-21  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b50

	* Change:  Simplify the output for the confirm page of the 
	  config wizard.  This allows us to use only one output buffer,
	  requiring less memory, and chance for error.

	  Errors are now placed inline with the normal config.php data,
	  and prepended with //, just like the "optional" lines.

2004-07-20  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b49

	* Change: getRequestVar, getEnvVar, getFilesVar now accept string arrays

	* Change: Correct the default value for the new SMTP option

2004-07-21  Chris Kelly <ckdake@users.sf.net> 1.4.5-cvs-b48

	* Change: show "highlight" under images when logged in as an admin
		if the image is a highlight
