@@ -247,11 +247,8 @@ TD, P
 
 .vasummary /* controls the view of Album summary */
 {
-        font-family:verdana, arial, sans-serif;
-        color: #CB3B3B;
         font-weight:bold;
         padding:2px;
         margin-top:10px;
-        border:3px groove #CB3B3B;
         width:80%;
 }
