@@ -331,6 +331,7 @@ A:hover	{ color: #C51B1B; }
 	  color: #C51B1B;
 	  text-decoration: none;
 	}
+
 .vasummary /* controls the view of Album summary */
 {
         font-family:verdana, arial, sans-serif;
