@@ -352,13 +352,12 @@ A:hover	{ color: #E91414; }
 .vafloat2 /* float for view album - images */
  {
  	float: center; 
- }.vasummary /* controls the view of Album summary */
+ }
+
+.vasummary /* controls the view of Album summary */
 {
-        font-family:verdana, arial, sans-serif;
-        color: #CB3B3B;
         font-weight:bold;
         padding:2px;
         margin-top:10px;
-        border:3px groove #CB3B3B;
         width:80%;
 }
