@@ -1,3 +1,11 @@
+2004-07-22 Jens A. Tkotz <jens@peino.de> 1.4.5-cvs-b58
+
+	* Fix: Show Album Summary only if it exists.
+
+	* Fix: wrong html around Album Summary.
+
+	* Fix: Correct .vassummary class for all skins.
+
 2004-07-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b57
 
 	* Change: Better handling of the onsubmit/double-clicking issue
